[package]
name = "JokeChain"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39.2", features = ["full"] }
k256 = "0.13.3"
hex = "0.4.3"
num-bigint = { version = "0.4.6", features = ["rand"] }
num-traits = "0.2.19"
num-integer = "0.1.46"
rand = { version = "0.8.5", features = ["default"] }
sha2 = "0.10.8"
anyhow = "1.0.86"
